@@ -38,6 +38,25 @@
 #define wxEVT_AUI_PANE_RESTORE  wxEVT_AUI_PANERESTORE
 #endif
 
+#if WXPERL_W_VERSION_GE( 2, 9, 5 )
+#define wxEVT_COMMAND_AUINOTEBOOK_PAGE_CLOSE        wxEVT_AUINOTEBOOK_PAGE_CLOSE
+#define wxEVT_COMMAND_AUINOTEBOOK_PAGE_CLOSED       wxEVT_AUINOTEBOOK_PAGE_CLOSED
+#define wxEVT_COMMAND_AUINOTEBOOK_PAGE_CHANGED      wxEVT_AUINOTEBOOK_PAGE_CHANGED
+#define wxEVT_COMMAND_AUINOTEBOOK_PAGE_CHANGING     wxEVT_AUINOTEBOOK_PAGE_CHANGING
+#define wxEVT_COMMAND_AUINOTEBOOK_BUTTON            wxEVT_AUINOTEBOOK_BUTTON
+#define wxEVT_COMMAND_AUINOTEBOOK_BEGIN_DRAG        wxEVT_AUINOTEBOOK_BEGIN_DRAG
+#define wxEVT_COMMAND_AUINOTEBOOK_END_DRAG          wxEVT_AUINOTEBOOK_END_DRAG
+#define wxEVT_COMMAND_AUINOTEBOOK_DRAG_MOTION       wxEVT_AUINOTEBOOK_DRAG_MOTION
+#define wxEVT_COMMAND_AUINOTEBOOK_ALLOW_DND         wxEVT_AUINOTEBOOK_ALLOW_DND
+#define wxEVT_COMMAND_AUINOTEBOOK_DRAG_DONE         wxEVT_AUINOTEBOOK_DRAG_DONE
+#define wxEVT_COMMAND_AUINOTEBOOK_TAB_MIDDLE_DOWN   wxEVT_AUINOTEBOOK_TAB_MIDDLE_DOWN
+#define wxEVT_COMMAND_AUINOTEBOOK_TAB_MIDDLE_UP     wxEVT_AUINOTEBOOK_TAB_MIDDLE_UP
+#define wxEVT_COMMAND_AUINOTEBOOK_TAB_RIGHT_DOWN    wxEVT_AUINOTEBOOK_TAB_RIGHT_DOWN
+#define wxEVT_COMMAND_AUINOTEBOOK_TAB_RIGHT_UP      wxEVT_AUINOTEBOOK_TAB_RIGHT_UP
+#define wxEVT_COMMAND_AUINOTEBOOK_BG_DCLICK         wxEVT_AUINOTEBOOK_BG_DCLICK
+#define wxEVT_COMMAND_AUINOTEBOOK_CANCEL_DRAG       wxEVT_AUINOTEBOOK_CANCEL_DRAG
+#endif
+
 static wxPliEventDescription evts[] =
 {
     SEVT( EVT_AUI_PANE_BUTTON, 2 )
@@ -62,7 +81,10 @@ static wxPliEventDescription evts[] =
     EVT( EVT_AUINOTEBOOK_TAB_MIDDLE_UP, 3, wxEVT_COMMAND_AUINOTEBOOK_TAB_MIDDLE_UP )
     EVT( EVT_AUINOTEBOOK_TAB_RIGHT_DOWN, 3, wxEVT_COMMAND_AUINOTEBOOK_TAB_RIGHT_DOWN )
     EVT( EVT_AUINOTEBOOK_TAB_RIGHT_UP, 3, wxEVT_COMMAND_AUINOTEBOOK_TAB_RIGHT_UP )
-    EVT( EVT_AUINOTEBOOK_BG_DCLICK, 3, wxEVT_COMMAND_AUINOTEBOOK_BG_DCLICK )    
+    EVT( EVT_AUINOTEBOOK_BG_DCLICK, 3, wxEVT_COMMAND_AUINOTEBOOK_BG_DCLICK )
+#if WXPERL_W_VERSION_GE( 2, 9, 5 )
+    EVT( EVT_AUINOTEBOOK_CANCEL_DRAG, 3, wxEVT_COMMAND_AUINOTEBOOK_CANCEL_DRAG )
+#endif
     { 0, 0, 0 }
 };
 
